# project_and_process

./: README.md  pyproject.toml
.github/workflows/: ci.yml
resources/: Controle_Venda_randomizado - Erro - Nova Coluna.csv  Controle_Venda_randomizado - Erro.csv  Controle_Venda_randomizado.csv  categorias_validas.csv  vendedores_ativos.csv
src/: app.py
src/backend/: db_conection.py  excel_extrator.py
src/backend/db/class/: db_class.py
src/backend/db/classes/: db_class.py
src/backend/db/models/: sale_model.py
src/backend/db/schema/: schema.py
src/config/: config.py  logger.py
src/contracts/: contract.py
src/frontend/: app.py  frontend.py
src/utils/: loader.py
tests/: test_contract.py  test_dbConnection.py  test_frontend.py
